Add demo files from envoy example
- Move origin files into archieve folder

--- a/content/elasticsearch/envoy-otel-provider/archieve/envoy-1.yaml
+++ b/content/elasticsearch/envoy-otel-provider/archieve/envoy-1.yaml
@@ -15,22 +15,53 @@ static_resources:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          # ---------------------
+          # Tracing configuration 
+          # ---------------------
           tracing:
+            custom_tags:
+              - tag: API Log ID
+                request_header: 
+                  name: Api-Log-Id
+                  default_value: NaN
             provider:
               name: envoy.tracers.opentelemetry
               typed_config:
                 "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                 grpc_service:
                   envoy_grpc:
-                    cluster_name: opentelemetry_collector
+                    cluster_name: jaeger-collector
                   timeout: 0.250s
                 service_name: envoy-1
           codec_type: AUTO
           stat_prefix: ingress_http
+          # -------------------
+          # HTTP filters chain 
+          # -------------------
           http_filters:
+          # ----------
+          # WASM filter
+          # -----------
+          - name: envoy.filters.http.wasm
+            typed_config:
+              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
+              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
+              value:
+                config:
+                  vm_config:
+                    runtime: "envoy.wasm.runtime.v8"
+                    code:
+                      local:
+                        filename: "/etc/wasm/main.wasm"
+          # --------------
+          # Routing filter
+          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+          # --------------
+          # Routing config
+          # --------------
           route_config:
             name: service1_route
             virtual_hosts:
@@ -54,7 +85,15 @@ static_resources:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          # ---------------------
+          # Tracing configuration 
+          # ---------------------
           tracing:
+            custom_tags:
+              - tag: API Log ID
+                request_header: 
+                  name: Api-Log-Id
+                  default_value: NaN
             provider:
               name: envoy.tracers.opentelemetry
               typed_config:
@@ -66,10 +105,35 @@ static_resources:
                 service_name: envoy-1
           codec_type: AUTO
           stat_prefix: egress_http
+
+          # -------------------
+          # HTTP filters chain 
+          # -------------------
           http_filters:
+          # ----------
+          # WASM filter
+          # -----------
+          - name: envoy.filters.http.wasm
+            typed_config:
+              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
+              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
+              value:
+                config:
+                  vm_config:
+                    runtime: "envoy.wasm.runtime.v8"
+                    code:
+                      local:
+                        filename: "/etc/wasm/main.wasm"
+          # --------------
+          # Routing filter
+          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+
+          # --------------
+          # Routing config
+          # --------------
           route_config:
             name: envoy2_route
             virtual_hosts:
@@ -109,7 +173,7 @@ static_resources:
               socket_address:
                 address: envoy-2
                 port_value: 10000
-  - name: opentelemetry_collector
+  - name: jaeger-collector
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
     typed_extension_protocol_options:
@@ -118,11 +182,11 @@ static_resources:
         explicit_http_config:
           http2_protocol_options: {}
     load_assignment:
-      cluster_name: opentelemetry_collector
+      cluster_name: jaeger-collector
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: opentelemetry
+                address: jaeger-collector
                 port_value: 4317
