--- a/content/elasticsearch/envoy-otel-provider/docker-compose.yaml
+++ b/content/elasticsearch/envoy-otel-provider/docker-compose.yaml
@@ -1,17 +1,14 @@
 services:
+
   envoy-front-proxy:
     build:
       context: .
       dockerfile: ../shared/envoy/Dockerfile
       args:
         ENVOY_CONFIG: envoy-front-proxy.yaml
-    networks:
-      - otel-envoy
-    volumes:
-      - ../shared/wasm/main.wasm:/etc/wasm/main.wasm
     depends_on:
-      # jaeger:
-      #   condition: service_healthy
+      opentelemetry:
+        condition: service_healthy
       envoy-1:
         condition: service_started
       envoy-2:
@@ -25,13 +22,9 @@ services:
       dockerfile: ../shared/envoy/Dockerfile
       args:
         ENVOY_CONFIG: envoy-1.yaml
-    networks:
-      - otel-envoy
-    volumes:
-      - ../shared/wasm/main.wasm:/etc/wasm/main.wasm
     depends_on:
-      # jaeger:
-      #   condition: service_healthy
+      opentelemetry:
+        condition: service_healthy
       service-1:
         condition: service_healthy
       envoy-2:
@@ -43,13 +36,9 @@ services:
       dockerfile: ../shared/envoy/Dockerfile
       args:
         ENVOY_CONFIG: envoy-2.yaml
-    networks:
-      - otel-envoy
-    volumes:
-      - ../shared/wasm/main.wasm:/etc/wasm/main.wasm
     depends_on:
-      # jaeger:
-      #   condition: service_healthy
+      opentelemetry:
+        condition: service_healthy
       service-2:
         condition: service_healthy
 
@@ -57,8 +46,6 @@ services:
     build:
       context: ../shared/python
       target: aiohttp-tracing-service
-    networks:
-      - otel-envoy
     environment:
     - SERVICE_NAME=1
 
@@ -66,87 +53,19 @@ services:
     build:
       context: ../shared/python
       target: aiohttp-tracing-service
-    networks:
-      - otel-envoy
     environment:
     - SERVICE_NAME=2
 
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.17.15
-    networks:
-      - otel-envoy
-    restart: on-failure
+  opentelemetry:
+    build:
+      context: .
+      dockerfile: Dockerfile-opentelemetry
+    healthcheck:
+      test: ["CMD-SHELL", "curl -sf http://localhost:13133 || exit 1"]
+      interval: 1s
+      timeout: 120s
+      retries: 120
+      start_period: 5s
+    command: ["--config=/etc/otel-collector-config.yaml"]
     ports:
-      - "127.0.0.1:5601:5601"
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - XPACK_SECURITY_ENABLED=false
-      - INTERACTIVESETUP_ENABLED=false
-    depends_on:
-      - elasticsearch
-
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.15
-    networks:
-      - otel-envoy
-    ports:
-      - "127.0.0.1:9200:9200"
-      - "127.0.0.1:9300:9300"
-    restart: on-failure
-    environment:
-      - cluster.name=jaeger-cluster
-      - discovery.type=single-node
-      - http.host=0.0.0.0
-      - transport.host=127.0.0.1
-      - ES_JAVA_OPTS=-Xms512m -Xmx512m
-      - xpack.security.enabled=false
-      - INTERACTIVESETUP_ENABLED=false
-    volumes:
-      - esenvoy:/usr/share/elasticsearch/data
-
-  jaeger-collector:
-    image: jaegertracing/jaeger-collector
-    ports:
-      - "14269:14269"
-      - "14268:14268"
-      - "14267:14267"
-      - "14250:14250"
-      - "9411:9411"
-    networks:
-      - otel-envoy
-    restart: on-failure
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-    command: 
-      - "--es.server-urls=http://elasticsearch:9200"
-      - "--es.num-shards=1"
-      - "--es.num-replicas=0"
-      # - "--log-level=error"
-    depends_on:
-      - elasticsearch
-
-  jaeger-query:
-    image: jaegertracing/jaeger-query
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-      - no_proxy=localhost
-    ports:
-      - "16686:16686"
-      - "16687:16687"
-    networks:
-      - otel-envoy
-    restart: on-failure
-    command: 
-      - "--es.server-urls=http://elasticsearch:9200"
-      - "--span-storage.type=elasticsearch"
-    
-    depends_on:
-      - elasticsearch
-
-volumes:
-  esenvoy:
-    driver: local
-
-networks:
-  otel-envoy:
-    driver: bridge
+    - "${PORT_UI:-55679}:55679"
