--- a/content/elasticsearch/envoy-otel-provider/archieve/envoy-2.yaml
+++ b/content/elasticsearch/envoy-otel-provider/archieve/envoy-2.yaml
@@ -1,7 +1,4 @@
-# This proxy listens on port 10000, and routes the following paths:
-#
-#   /trace/1 -> routes to `envoy-1` on port 10000
-#   /trace/2 -> routes to `envoy-1` on port 10001 (for onward routing to `envoy-2`)
+# This proxy listens on port 10000 and routes all queries to `service-2`.
 
 static_resources:
   listeners:
@@ -9,75 +6,87 @@ static_resources:
       socket_address:
         address: 0.0.0.0
         port_value: 10000
-    traffic_direction: OUTBOUND
+    traffic_direction: INBOUND
     filter_chains:
     - filters:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
-          generate_request_id: true
+          # ---------------------
+          # Tracing configuration 
+          # ---------------------
           tracing:
+            custom_tags:
+              - tag: API Log ID
+                request_header: 
+                  name: Api-Log-Id
+                  default_value: NaN
             provider:
               name: envoy.tracers.opentelemetry
               typed_config:
                 "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                 grpc_service:
                   envoy_grpc:
-                    cluster_name: opentelemetry_collector
+                    cluster_name: jaeger-collector
                   timeout: 0.250s
-                service_name: front-envoy
+                service_name: envoy-2
           codec_type: AUTO
           stat_prefix: ingress_http
+          # -------------------
+          # HTTP filters chain 
+          # -------------------
           http_filters:
+          # ----------
+          # WASM filter
+          # -----------
+          - name: envoy.filters.http.wasm
+            typed_config:
+              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
+              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
+              value:
+                config:
+                  vm_config:
+                    runtime: "envoy.wasm.runtime.v8"
+                    code:
+                      local:
+                        filename: "/etc/wasm/main.wasm"
+          # --------------
+          # Routing filter
+          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+          # --------------
+          # Routing config
+          # --------------
           route_config:
-            name: proxy_routes
+            name: service2_route
             virtual_hosts:
-            - name: proxy
+            - name: service2
               domains:
               - "*"
               routes:
               - match:
-                  prefix: "/trace/1"
+                  prefix: "/"
                 route:
-                  cluster: envoy_cluster1
+                  cluster: service_cluster2
                 decorator:
-                  operation: routeToEnvoy1
-              - match:
-                  prefix: "/trace/2"
-                route:
-                  cluster: envoy_cluster2
-                decorator:
-                  operation: routeToEnvoy2ViaEnvoy1
+                  operation: routeToService2
 
   clusters:
-  - name: envoy_cluster1
+  - name: service_cluster2
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
     load_assignment:
-      cluster_name: envoy_cluster1
+      cluster_name: service_cluster2
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: envoy-1
-                port_value: 10000
-  - name: envoy_cluster2
-    type: STRICT_DNS
-    lb_policy: ROUND_ROBIN
-    load_assignment:
-      cluster_name: envoy_cluster2
-      endpoints:
-      - lb_endpoints:
-        - endpoint:
-            address:
-              socket_address:
-                address: envoy-1
-                port_value: 10001
-  - name: opentelemetry_collector
+                address: service-2
+                port_value: 8080
+  - name: jaeger-collector
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
     typed_extension_protocol_options:
@@ -86,11 +95,11 @@ static_resources:
         explicit_http_config:
           http2_protocol_options: {}
     load_assignment:
-      cluster_name: opentelemetry_collector
+      cluster_name: jaeger-collector
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: opentelemetry
+                address: jaeger-collector
                 port_value: 4317
