Make opentelemetry no need to build from docker file

--- a/content/elasticsearch/envoy-otel-provider/docker-compose.yaml
+++ b/content/elasticsearch/envoy-otel-provider/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       args:
         ENVOY_CONFIG: envoy-front-proxy.yaml
     depends_on:
-      opentelemetry:
-        condition: service_healthy
+      # opentelemetry:
+      #   condition: service_healthy
       envoy-1:
         condition: service_started
       envoy-2:
@@ -23,8 +23,8 @@ services:
       args:
         ENVOY_CONFIG: envoy-1.yaml
     depends_on:
-      opentelemetry:
-        condition: service_healthy
+      # opentelemetry:
+      #   condition: service_healthy
       service-1:
         condition: service_healthy
       envoy-2:
@@ -37,8 +37,8 @@ services:
       args:
         ENVOY_CONFIG: envoy-2.yaml
     depends_on:
-      opentelemetry:
-        condition: service_healthy
+      # opentelemetry:
+      #   condition: service_healthy
       service-2:
         condition: service_healthy
 
@@ -57,15 +57,10 @@ services:
     - SERVICE_NAME=2
 
   opentelemetry:
-    build:
-      context: .
-      dockerfile: Dockerfile-opentelemetry
-    healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://localhost:13133 || exit 1"]
-      interval: 1s
-      timeout: 120s
-      retries: 120
-      start_period: 5s
+    image: otel/opentelemetry-collector:0.89.0
     command: ["--config=/etc/otel-collector-config.yaml"]
+    volumes: 
+      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
+
     ports:
     - "${PORT_UI:-55679}:55679"
