--- a/content/elasticsearch/envoy-otel-provider/otel-collector-config.yaml
+++ b/content/elasticsearch/envoy-otel-provider/otel-collector-config.yaml
@@ -24,7 +24,7 @@ exporters:
   logging:
     loglevel: debug
   otlp:
-    endpoint: jaeger:4317
+    endpoint: jaeger-collector:4317
     tls:
       insecure: true
 
