Add elasticsearch config in the yaml files

--- a/content/elasticsearch/envoy-otel-provider/otel-collector-config.yaml
+++ b/content/elasticsearch/envoy-otel-provider/otel-collector-config.yaml
@@ -33,7 +33,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [memory_limiter, batch]
-      exporters: [logging, otlp]
+      exporters: [otlp]
     metrics:
       receivers: [otlp]
       processors: [memory_limiter, batch]
