--- a/content/elasticsearch/envoy-otel-provider/envoy-front-proxy.yaml
+++ b/content/elasticsearch/envoy-otel-provider/envoy-front-proxy.yaml
@@ -126,3 +126,18 @@ static_resources:
               socket_address:
                 address: opentelemetry
                 port_value: 4317
+
+  # - name: elasticsearch
+  #   type: LOGICAL_DNS
+  #   connect_timeout: 0.5s
+  #   lb_policy: ROUND_ROBIN
+  #   load_assignment:
+  #     cluster_name: elasticsearch
+  #     endpoints:
+  #       - lb_endpoints:
+  #           - endpoint:
+  #               address:
+  #                 socket_address:
+  #                   protocol: TCP
+  #                   address: elasticsearch
+  #                   port_value: 9200
