Wasm filter is able to export data to elastic search

--- a/content/elasticsearch/envoy-otel-provider/Makefile
+++ b/content/elasticsearch/envoy-otel-provider/Makefile
@@ -1,12 +1,15 @@
 targets := $(wildcard *.yaml) 
 
-.PHONY: build
+.PHONY: build stop
 
 all: run
 run: build
-	docker compose up --no-attach kibana --no-attach elasticsearch
+	docker compose up --no-attach kibana --no-attach elasticsearch --no-attach service-1 --no-attach service-2 --no-attach opentelemetry --no-attach jaeger-collector --no-attach jaeger-query
 
 build: .build.docker
 .build.docker: $(targets)
 	docker compose build
 	touch $@
+
+stop: 
+	docker compose down
