--- a/content/elasticsearch/envoy-otel-provider/envoy-front-proxy.yaml
+++ b/content/elasticsearch/envoy-otel-provider/envoy-front-proxy.yaml
@@ -127,17 +127,17 @@ static_resources:
                 address: opentelemetry
                 port_value: 4317
 
-  # - name: elasticsearch
-  #   type: LOGICAL_DNS
-  #   connect_timeout: 0.5s
-  #   lb_policy: ROUND_ROBIN
-  #   load_assignment:
-  #     cluster_name: elasticsearch
-  #     endpoints:
-  #       - lb_endpoints:
-  #           - endpoint:
-  #               address:
-  #                 socket_address:
-  #                   protocol: TCP
-  #                   address: elasticsearch
-  #                   port_value: 9200
+  - name: elasticsearch
+    type: LOGICAL_DNS
+    connect_timeout: 0.5s
+    lb_policy: ROUND_ROBIN
+    load_assignment:
+      cluster_name: elasticsearch
+      endpoints:
+        - lb_endpoints:
+            - endpoint:
+                address:
+                  socket_address:
+                    # protocol: TCP
+                    address: elasticsearch
+                    port_value: 9200
